# expected-lite

./: .gitignore  .tgitconfig  .travis.yml  CMakeLists.txt  Notes.md  Notes.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  02-required.cpp  03-no-exceptions.cpp  CMakeLists.txt
include/nonstd/: expected.hpp
project/CodeBlocks/: expected-lite.cbp  expected.cbp
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: CMakeLists.txt  expected-lite.t.cpp  expected-lite.t.h  expected-main.t.cpp  expected-main.t.hpp  expected-noexcept.t.cpp  expected.t.cpp  odr.cpp  t-noexcept.bat  t-odr.bat  t.bat  tc-cl.bat  tc-noexcept.bat  tc.bat  tg-all.bat  tg-ct.bat  tg-noexcept.bat  tg.bat
test/nonstd/: expected.tweak.hpp
